--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
       <a href="/blog/">Blog</a>
     </nav>
     <h1>{{ page.title }}</h1>
-    <section>
+    <section class="container-lg px-3 my-5 markdown-body">
       {{ content }}
     </section>
     <footer>
