--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
-      <a href="/blog/">Blog</a>
+      <ul>
+        {% for node in site.pages %}
+          <li><a href="{{ node.url }}</li>
+        {% endfor %}
+      </ul>
     </nav>
-    <h1>{{ page.title }}</h1>
     <section class="container-lg px-3 my-5 markdown-body">
       {{ content }}
     </section>
