fix(default.html): zmiana url scratchblocks z pliku w repozytorium na plik statyczny uywany przez stronę Github Pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <footer>
     &copy; to me
   </footer>
-  <script src="https://github.com/scratchblocks/scratchblocks/blob/master/index.js"></script>
+  <script src="https://scratchblocks.github.io/js/scratchblocks-v3.6.0-min.js"></script>
   <script>
     scratchblocks.renderMatching('code.language-scratch', {
       style: 'scratch3',
