--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
     &copy; to me
   </footer>
   <script src="https://scratchblocks.github.io/js/scratchblocks-v3.6.0-min.js"></script>
+  <script src="https://scratchblocks.github.io/js/translations-all-v3.6.0.js"></script>
   <script>
     scratchblocks.renderMatching('code.language-scratch', {
       style: 'scratch3',
