rollback(default.html): wyłączenie skryptu scratchblocks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   </footer>
   <script src="https://scratchblocks.github.io/js/scratchblocks-v3.6.0-min.js"></script>
   <script src="https://scratchblocks.github.io/js/translations-all-v3.6.0.js"></script>
-  <script>
+  <!-- <script>
     scratchblocks.renderMatching('code.language-scratch', {
       style: 'scratch3',
       languages: ['en', 'pl'],
@@ -34,7 +34,7 @@
       languages: ['en', 'pl'],
       scale: 1
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
