fix(default): dezaktywacja scratchblocks inline

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,12 @@
   <section class="container-lg px-3 my-5 markdown-body">
     {{ content }}
   </section>
+  <code class="language-scratch">
+    move (10) steps
+    if <not<>>
+      pen up
+    end
+  </code>
   <footer>
     &copy; to me
   </footer>
@@ -29,12 +35,12 @@
       languages: ['en', 'pl'],
       scale: 1
     });
-    scratchblocks.renderMatching('code.language-scratch', {
-      style: 'scratch3',
-      languages: ['en', 'pl'],
-      scale: 1,
-      inline: true
-    });
+    // scratchblocks.renderMatching('code.language-scratch', {
+    //   style: 'scratch3',
+    //   languages: ['en', 'pl'],
+    //   scale: 1,
+    //   inline: true
+    // });
   </script>
 </body>
 
