fix(default, ruch): dodanie `-inline` do nazwy klasy `.language-scratch` => `.language-scratch-inline`

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,12 @@
       languages: ['en', 'pl'],
       scale: 1
     });
-    // scratchblocks.renderMatching('code.language-scratch', {
-    //   style: 'scratch3',
-    //   languages: ['en', 'pl'],
-    //   scale: 1,
-    //   inline: true
-    // });
+    scratchblocks.renderMatching('code.language-scratch-inline', {
+      style: 'scratch3',
+      languages: ['en', 'pl'],
+      scale: 1,
+      inline: true
+    });
   </script>
 </body>
 
