--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <title>{{ page.title }} | {{ site.title }}</title>
   <link rel="stylesheet" href="/assets/css/style.css">
+  <style type="text/css">
+    code.language-scratch-inline {
+      all:unset
+    }
+  </style>
 </head>
 
 <body>
